net/aws_route_table_association__private1.tf
# # File generated by aws2tf see https://github.com/aws-samples/aws2tf
# # aws_route_table_association.rtbassoc-04310374909657ddd:
# resource "aws_route_table_association" "rtbassoc-04310374909657ddd" {
#   route_table_id = aws_route_table.rtb-0fe5311ff86579482.id
#   subnet_id      = aws_subnet.subnet-00cc72ac5b0b79dd4.id
# }
