net/aws_subnet__eks-cicd-public1.tf
# # File generated by aws2tf see https://github.com/aws-samples/aws2tf
# resource "aws_subnet" "subnet-cicd-public1" {
#   assign_ipv6_address_on_creation = false
#   availability_zone               = data.aws_availability_zones.az.names[0]
#   cidr_block                      = "172.30.0.0/26"
#   map_public_ip_on_launch         = false
#   tags = {
#     "Name"     = "cicd-public1"
#     "workshop" = "cicd-public1"
#   }
#   vpc_id = aws_vpc.vpc-cicd.id

#   timeouts {}
# }
