net/aws_vpc__eks-cicd.tf
# # File generated by aws2tf see https://github.com/aws-samples/aws2tf
# # aws_vpc.vpc-cicd:
# resource "aws_vpc" "vpc-cicd" {
#   assign_generated_ipv6_cidr_block = false
#   cidr_block                       = "172.30.0.0/24"
#   enable_dns_hostnames             = false
#   enable_dns_support               = true
#   instance_tenancy                 = "default"
#   tags = {
#     "Name" = format("%s-eks-cicd", data.aws_ssm_parameter.environment.value )
#     "workshop" = "eks-cicd"
#   }
# }
