net/subnets-eks.tf
# File generated by aws2tf see https://github.com/aws-samples/aws2tf

# aws_subnet.subnet-i1:
resource "aws_subnet" "subnet-i1" {
  depends_on                      = [aws_vpc_ipv4_cidr_block_association.vpc-cidr-assoc]
  assign_ipv6_address_on_creation = false
  availability_zone               = data.aws_availability_zones.az.names[0]
  cidr_block                      = var.subnet-i1
  map_public_ip_on_launch         = false
  tags = {
    "Name"                                                                      = format("i1-%s", data.aws_ssm_parameter.tf-eks-cluster-name.value)
    "kubernetes.io/cluster/${data.aws_ssm_parameter.tf-eks-cluster-name.value}" = "shared"
    "workshop"                                                                  = "subnet-i1"
  }
  vpc_id = aws_vpc.cluster.id

  timeouts {}
}


resource "aws_subnet" "subnet-i2" {
  depends_on                      = [aws_vpc_ipv4_cidr_block_association.vpc-cidr-assoc]
  assign_ipv6_address_on_creation = false
  availability_zone               = data.aws_availability_zones.az.names[1]
  cidr_block                      = var.subnet-i2
  map_public_ip_on_launch         = false
  tags = {
    "Name"                                                                      = format("i2-%s", data.aws_ssm_parameter.tf-eks-cluster-name.value)
    "kubernetes.io/cluster/${data.aws_ssm_parameter.tf-eks-cluster-name.value}" = "shared"
    "workshop"                                                                  = "subnet-i2"
  }
  vpc_id = aws_vpc.cluster.id

  timeouts {}
}


# File generated by aws2tf see https://github.com/aws-samples/aws2tf
# aws_subnet.subnet-i3:
resource "aws_subnet" "subnet-i3" {
  depends_on                      = [aws_vpc_ipv4_cidr_block_association.vpc-cidr-assoc]
  assign_ipv6_address_on_creation = false
  availability_zone               = data.aws_availability_zones.az.names[2]
  cidr_block                      = var.subnet-i3
  map_public_ip_on_launch         = false
  tags = {
    "Name"                                                                      = format("i3-%s", data.aws_ssm_parameter.tf-eks-cluster-name.value)
    "kubernetes.io/cluster/${data.aws_ssm_parameter.tf-eks-cluster-name.value}" = "shared"
    "workshop"                                                                  = "subnet-i3"
  }
  vpc_id = aws_vpc.cluster.id

  timeouts {}
}

# File generated by aws2tf see https://github.com/aws-samples/aws2tf
# aws_subnet.subnet-p1:
resource "aws_subnet" "subnet-pub1" {
  assign_ipv6_address_on_creation = false
  availability_zone               = data.aws_availability_zones.az.names[0]
  cidr_block                      = var.subnet-pub1
  map_public_ip_on_launch         = false
  tags = {
    "Name"                                                                      = "Public1"
    "kubernetes.io/cluster/${data.aws_ssm_parameter.tf-eks-cluster-name.value}" = "shared"
    "kubernetes.io/role/internal-elb"                                           = "1"
    "workshop"                                                                  = "subnet-p1"
  }
  vpc_id = aws_vpc.cluster.id

  timeouts {}
}


resource "aws_subnet" "subnet-pub2" {
  assign_ipv6_address_on_creation = false
  availability_zone               = data.aws_availability_zones.az.names[1]
  cidr_block                      = var.subnet-pub2
  map_public_ip_on_launch         = false
  tags = {
    "Name"                                                                      = "Public2"
    "kubernetes.io/cluster/${data.aws_ssm_parameter.tf-eks-cluster-name.value}" = "shared"
    "kubernetes.io/role/internal-elb"                                           = "1"
    "workshop"                                                                  = "subnet-p2"
  }
  vpc_id = aws_vpc.cluster.id

  timeouts {}
}



resource "aws_subnet" "subnet-pub3" {
  assign_ipv6_address_on_creation = false
  availability_zone               = data.aws_availability_zones.az.names[2]
  cidr_block                      = var.subnet-pub3
  map_public_ip_on_launch         = false
  tags = {
    "Name"                                                                      = "Public3"
    "kubernetes.io/cluster/${data.aws_ssm_parameter.tf-eks-cluster-name.value}" = "shared"
    "kubernetes.io/role/internal-elb"                                           = "1"
    "workshop"                                                                  = "subnet-p3"
  }
  vpc_id = aws_vpc.cluster.id

  timeouts {}
}

resource "aws_subnet" "subnet-p1" {
  assign_ipv6_address_on_creation = false
  availability_zone               = data.aws_availability_zones.az.names[0]
  cidr_block                      = var.subnet-priv1
  map_public_ip_on_launch         = false
  tags = {
    "Name"                                                                      = "Private1"
    "kubernetes.io/cluster/${data.aws_ssm_parameter.tf-eks-cluster-name.value}" = "shared"
    "kubernetes.io/role/internal-elb"                                           = "1"
    "workshop"                                                                  = "subnet-p1"
    "karpenter.sh/discovery"                                                    = data.aws_ssm_parameter.tf-eks-cluster-name.value
  }
  vpc_id = aws_vpc.cluster.id

  timeouts {}
}


resource "aws_subnet" "subnet-p2" {
  assign_ipv6_address_on_creation = false
  availability_zone               = data.aws_availability_zones.az.names[1]
  cidr_block                      = var.subnet-priv2
  map_public_ip_on_launch         = false
  tags = {
    "Name"                                                                      = "Private2"
    "kubernetes.io/cluster/${data.aws_ssm_parameter.tf-eks-cluster-name.value}" = "shared"
    "kubernetes.io/role/internal-elb"                                           = "1"
    "workshop"                                                                  = "subnet-p2"
    "karpenter.sh/discovery"                                                    = data.aws_ssm_parameter.tf-eks-cluster-name.value
  }
  vpc_id = aws_vpc.cluster.id

  timeouts {}
}



resource "aws_subnet" "subnet-p3" {
  assign_ipv6_address_on_creation = false
  availability_zone               = data.aws_availability_zones.az.names[2]
  cidr_block                      = var.subnet-priv3
  map_public_ip_on_launch         = false
  tags = {
    "Name"                                                                      = "Private3"
    "kubernetes.io/cluster/${data.aws_ssm_parameter.tf-eks-cluster-name.value}" = "shared"
    "kubernetes.io/role/internal-elb"                                           = "1"
    "workshop"                                                                  = "subnet-p3"
    "karpenter.sh/discovery"                                                    = data.aws_ssm_parameter.tf-eks-cluster-name.value
  }
  vpc_id = aws_vpc.cluster.id

  timeouts {}
}
