net/vpc-cluster.tf
# File generated by aws2tf see https://github.com/aws-samples/aws2tf
# aws_vpc.vpc-vpc-:
resource "aws_vpc" "cluster" {
  assign_generated_ipv6_cidr_block = false
  cidr_block                       = var.vpc-cidr-cluster
  enable_dns_hostnames             = true
  enable_dns_support               = true
  instance_tenancy                 = "default"
  tags = {
    "Name" = format("%s-eks-%s-cluster", data.aws_ssm_parameter.environment.value ,data.aws_ssm_parameter.tf-eks-cluster-name.value)
  }
}
